# coco-embeddings

./: .gitignore  README.md  coco-embeddings.py  main.py  pyproject.toml
calculation/: caculation.py
config/: config.yaml
config/dataset/: dataset.yaml
src/: __init__.py  datasets.py  models.py
utils/: __init__.py  crop.py
